--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -2,175 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@responsive {
-  .bg-section-one-blue {
-    background-image: linear-gradient(0deg, #E0EAF3, #E0EAF3);
-  }
+.company-card {
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.06);
 }
 
-@responsive {
-  .bg-section-three {
-    background-image: linear-gradient(0deg, #DFF5F4, #DFF5F4);
-  }
+.menu-bottom-section {
+  box-shadow: 0px -3px 14px rgba(0, 0, 0, 0.03);
 }
 
-.section-class {
-  background-image: url(./img/leapfinance-girl-1.png);
+.table-shadow-col {
+  box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.04);
 }
-
-.leading-11 {
-  line-height: 4.5rem;
-}
-
-.section-one-fig {
-  /* margin-top: 72px; */
-  width: 459px;
-  height: 673px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center
-}
-
-.section-one-img-mobile {
-  margin-top: -54px !important;
-  /* margin-left: -13px !important; */
-}
-
-.section-one-mobile-card {
-  bottom: -120px;
-}
-
-.section-one-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: right center;
-}
-
-.section-one-fig-div {
-  display: flex;
-  align-items: flex-end;
-}
-
-.section-three-single-illustration {
-  min-width: 219px;
-}
-
-.section-five-desktop {
-  height: 303px;
-
-}
-
-@media (min-width: 640px) {
-  .section-five-desktop {
-    height: 593px;
-
-  }
-}
-
-/* table {
-  border-collapse: separate !important;
- } */
-
-/* tbody>tr>:nth-child(2){
-  background: #443EFF;
-  box-shadow: 0px 8px 20px rgba(130, 136, 148, 0.16), 0px 0px 2px rgba(130, 136, 148, 0.14);
-  border-radius: 7px;
-  color: white;
-  margin-top: -16px;
-  padding-top: 1rem;
- } */
-
-.table-col-3-shadow {
-  box-shadow: 0px 8px 20px rgba(130, 136, 148, 0.16), 0px 0px 2px rgba(130, 136, 148, 0.48);
-  min-width: 232px;
-  background-color: white;
-  z-index: 1;
-}
-
-.table-col-2-shadow {
-  box-shadow: 0px 8px 20px rgba(130, 136, 148, 0.16), 0px 0px 2px rgba(130, 136, 148, 0.14);
-  min-width: 232px;
-
-}
-
-.table-col-4 {
-  /* margin-left: -2px; */
-  box-shadow: 0px 8px 20px rgba(130, 136, 148, 0.16), 0px 0px 2px rgba(130, 136, 148, 0.48);
-  min-width: 232px;
-
-}
-
-
-
-
-
-.section-seven {
-  height: 558px;
-}
-
-.section-seven-fig {
-  top: -55px
-}
-
-.section-seven-img {
-  width: 875px;
-  height: 613px;
-}
-
-.section-seven-heading {
-  margin-top: 355px;
-  width: 413px;
-  font-size: 105px;
-  line-height: 85px;
-  letter-spacing: -3.2px;
-  margin-left: -136px;
-}
-
-@media (min-width: 640px) {
-  .section-seven-heading {
-    margin-left: 0px;
-
-  }
-}
-
-@media (min-width: 1024px) {
-  .section-seven-heading {
-    margin-left: -136px;
-
-  }
-}
-
-.section-seven-heading-mobile {
-  font-size: 70px;
-  line-height: 55px;
-  letter-spacing: -2.2px;
-  position: absolute;
-  bottom: 12px;
-}
-
-.section-seven-quote-div {
-  width: 465px;
-}
-
-.section-nine-fig {
-  width: 310px;
-}
-
-.footer-col {
-  min-width: 151px;
-}
-
-.table-parent {
-  min-width: 800px;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-
-
-.play-svg {
-  top: 38%;
-
-}
-
