--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -21,3 +21,27 @@
   box-sizing: border-box;
   border-radius: 4px;
 }
+
+.header-width {
+  min-width: 700px
+}
+
+.col-1 {
+  min-width: 301px;
+}
+
+.col-2{
+  min-width: 95px;
+}
+
+.col-3 {
+  min-width: 250px;
+}
+
+.col-4 {
+  min-width: 168px;
+}
+
+.col-5 {
+  min-width: 248px;
+}
