--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -10,9 +10,11 @@
   box-shadow: 0px -3px 14px rgba(0, 0, 0, 0.03);
 }
 
-.table-shadow-col {
-  box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.04);
+.menu-items-div {
+  height: calc(100vh - 218px);
 }
+
+
 
 .checkbox {
   width: 20px;
@@ -22,26 +24,97 @@
   border-radius: 4px;
 }
 
-.header-width {
-  min-width: 700px
-}
+/* .header-width {
+  min-width: 700px;
+} */
 
 .col-1 {
   min-width: 301px;
+  max-width: 301px;
+  width: 100%;
 }
 
 .col-2{
   min-width: 95px;
+  max-width: 95px;
+  width: 100%;
 }
 
 .col-3 {
   min-width: 250px;
+  max-width: 250px;
+  width: 100%;
 }
 
 .col-4 {
   min-width: 168px;
+  max-width: 168px;
+  width: 100%;
 }
 
 .col-5 {
   min-width: 248px;
+  max-width: 248px;
+  width: 100%;
+}
+
+
+.table-scroll {
+  height: calc(100vh - 178px);
+}
+
+/* .table-scroll thead th {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1;
+} */
+
+/* th:first-child {
+  position: -webkit-sticky;
+  position: sticky;
+  right: 0;
+  z-index: 10;
+  background: blue;
+} */
+
+
+
+.col-1-header {
+  position: sticky;
+  left: 0;
+  top: 0;
+  z-index: 22;
+  background: white;
+}
+
+.col-6-header {
+  position: sticky;
+  right: 0;
+  top: 0;
+  z-index: 22;
+  background: white;
+}
+
+.col-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: white;
+}
+
+.table-shadow-col {
+  box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.04);
+  position: sticky;
+  left: 0;
+  z-index: 1;
+  background: white;
+}
+
+.last-col {
+  position: sticky;
+  right: 0;
+  z-index: 1;
+  background: white;
 }
